# imager

./: README.md  dev.sh  index.html  latest.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yaml  release.yml
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: button.jsx  settings.jsx
