[package]
name = "imagers"
version = "0.1.9"
description = "
Imagers is a high-performance, cross-platform desktop application built with Tauri v2 and React. It streamlines image management by allowing users to quickly organize, tag, and move photos using customizable keyboard shortcuts.
"
authors = ["Mohammed Naser"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "imagers_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]

tauri = { version = "2", features = [ "image-ico", "image-png"] }
# 2. Add these specific plugins for Tauri v2
tauri-plugin-updater = "2"
tauri-plugin-process = "2" # Required to restart the app after update
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Your other dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
